# AdventOfCode

2018/: default.nix
2018/day01/: part2.cpp
2018/day02/: part1.cpp  part2.cpp  sort.cpp  sorted.txt  twoletter.txt
2018/day03/: part1.cpp  part2.cpp
2018/day04/: 4sorted.txt  part1.cpp
2018/day05/: part1.cpp
2018/day06/: part1.cpp  part2.cpp
2018/day07/: 7parsed.txt  7revparse.txt  notes.org  part1.cpp  part2.cpp
2018/day08/: part1.cpp
2018/day09/: 9output.txt  part1  part1.cpp
2018/day10/: advent.hpp  notes.org  part1  part1.cpp  test.txt
2018/day11/: part1  part1.cpp
2018/day12/: part1  part1.cpp
2018/day13/: part1  part1.cpp
2018/day14/: part1  part1.cpp
2018/day16/: advent.hpp  operations.hpp  part1  part1.cpp  part2  part2.cpp
2018/day19/: 19parsed.txt  advent.hpp  operations.cpp  part1  part1.cpp  part2  part2.cpp  part3  part3.cpp
2018/day21/: 21.txt  output.txt  part1  part1.cpp  test.txt
2018/day22/: part1  part1.cpp
2018/day23/: advent.hpp  part1  part1.cpp  part2  part2.cpp
2018/day24/: part1  part1.cpp
2018/day25/: part1  part1.cpp
2019/: default.nix
2019/day01/: default.nix  main.cpp  test
2019/day02/: day2  main.cpp
2019/day03/: day1  main.cpp
2019/day04/: day4  main.cpp  take2.cpp
2019/day05/: Intcode.hpp  IntcodeFunctions.hpp  IntcodeMachine.hpp  day5  main.cpp
2019/day06/: Advent.hpp  day6  graph.cpp  main.cpp
2019/day07/: Intcode-bad.hpp  Intcode.hpp  day7  main.cpp
2019/day08/: Intcode.hpp  day8  main.cpp
2019/day09/: Advent.hpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Intcode.hpp  IntcodeTests.cpp  Makefile  cmake_install.cmake  day9  main.cpp  test_intcode
2019/day10/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  day10  main.cpp
2019/day11/: Advent.hpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  day11  main.cpp
2019/day12/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  day12  main.cpp
2019/day13/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Intcode.hpp  Makefile  cmake_install.cmake  day13  input.txt  main.cpp
2019/day14/: Advent.hpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  broken.cpp  day14  (+2 more)
2019/day15/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  day15  main.cpp  testcode.txt
2019/day16/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  day16  main.cpp
2019/day18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  day18  main.cpp  part1.cpp
2019/day20/: Advent.hpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Intcode.hpp  Makefile  cmake_install.cmake  day20  main.cpp
2019/day21/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  day21  main.cpp
2019/day23/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Intcode.hpp  Makefile  cmake_install.cmake  day23  main.cpp  threadfail.cpp
2019/day25/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  day25
2020/: default.nix
(+72 files in other folders)
